<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_large">

        <include
            android:id="@+id/appbar_view"
            layout="@layout/view_appbar_title" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <TextView
                android:id="@+id/text_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_large"
                android:text="@string/text_message_register_pay"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/send_button_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/spacing_middle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amount_text_input_layout">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/send_button"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="@dimen/spacing_large"
                    android:paddingEnd="@dimen/spacing_large"
                    android:text="@string/action_send"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/enter_code_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_middle"
                android:text="@string/action_cancel"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toStartOf="@+id/send_button_layout"
                app:layout_constraintTop_toBottomOf="@+id/amount_text_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_amount_register"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColorHint="@color/colorPrimary"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusTopEnd="0dp"
                app:boxCornerRadiusTopStart="0dp"
                app:helperTextTextColor="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_forgot_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="8" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
