<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xlarge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_layout"
                app:layout_constraintVertical_bias="0.104">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:layout_marginBottom="@dimen/spacing_mlarge"
                    android:text="@string/title_sign_in"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintBottom_toTopOf="@id/email_text_input_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_large"
                    android:hint="@string/label_user"
                    app:boxBackgroundMode="filled"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                    app:layout_constraintBottom_toTopOf="@id/password_text_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"
                        android:textCursorDrawable="@null" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_large"
                    android:hint="@string/label_password"
                    app:boxBackgroundMode="filled"
                    app:layout_constraintBottom_toTopOf="@id/login_button_coordinator_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true"
                        android:textCursorDrawable="@null" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:id="@+id/login_button_coordinator_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_large"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/login_button"
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/label_sign_in"
                        app:backgroundTint="@color/colorPrimary" />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        tools:visibility="visible" />

                </androidx.coordinatorlayout.widget.CoordinatorLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/logo_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/appCompatImageView"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintHorizontal_bias="0.929"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.499" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/app_name_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.125"
                    app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.499">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/app_name_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlue"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/slogan"
                        android:textAlignment="center"
                        android:textSize="11sp"
                        android:textStyle="italic"
                        app:layout_constraintTop_toBottomOf="@+id/app_name_text_view" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="171dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>